Initial commit with existing project

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -73,15 +73,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-08T10:40:20.197059Z",
-     "start_time": "2024-08-08T10:40:20.177707Z"
+     "end_time": "2024-08-08T12:20:30.526966Z",
+     "start_time": "2024-08-08T12:20:30.506818Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "os.makedirs(os.path.join(os.getcwd(), 'audio'), exist_ok=True)",
    "id": "b47cf42dd998720e",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 36
   },
   {
    "metadata": {
@@ -183,6 +183,95 @@
     }
    ],
    "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T11:53:14.731292Z",
+     "start_time": "2024-08-08T11:53:14.721335Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "import uuid",
+   "id": "154fa99fbbde2d0d",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T11:53:38.532594Z",
+     "start_time": "2024-08-08T11:53:38.519195Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "uuid.uuid1()",
+   "id": "f0e656c3a76a45b4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UUID('d981547d-557c-11ef-ad1b-74d4dd0403f2')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-09T13:34:12.283113Z",
+     "start_time": "2024-08-09T13:34:12.244816Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ],
+   "id": "224f4a373bb9cc88",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T11:50:28.782643Z",
+     "start_time": "2024-08-08T11:50:28.768644Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "os.getenv(\"USER_NAME\")",
+   "id": "11beb1c023c010bc",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'root'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   },
   {
    "metadata": {
@@ -471,6 +560,93 @@
    "execution_count": null,
    "source": "os.path.join(os.getcwd(), 'wav_files.wav', )",
    "id": "b68a47c59e4a944f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T16:14:39.861918Z",
+     "start_time": "2024-08-08T16:14:39.840908Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import yt_dlp\n",
+    "def download_audio1(youtube_url, output_dir):\n",
+    "    ydl_opts = {\n",
+    "        'format': 'bestaudio/best',\n",
+    "        'extractaudio': True,\n",
+    "        'audioformat': 'mp3',\n",
+    "        'outtmpl': os.path.join(output_dir, '%(title)s.%(ext)s'),\n",
+    "        'noplaylist': True  # Download only the single video\n",
+    "    }\n",
+    "\n",
+    "    with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
+    "        info_dict = ydl.extract_info(youtube_url, download=True)\n",
+    "        filename = ydl.prepare_filename(info_dict)\n",
+    "        return filename"
+   ],
+   "id": "ad25a07d7d5ccd28",
+   "outputs": [],
+   "execution_count": 38
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T16:19:06.708374Z",
+     "start_time": "2024-08-08T16:19:01.585060Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "download_audio1('https://www.youtube.com/watch?v=v_Lf-IB8_vQ', os.path.join( os.getcwd(), 'audio' ) )",
+   "id": "de999ee797481dd8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[youtube] Extracting URL: https://www.youtube.com/watch?v=v_Lf-IB8_vQ\n",
+      "[youtube] v_Lf-IB8_vQ: Downloading webpage\n",
+      "[youtube] v_Lf-IB8_vQ: Downloading ios player API JSON\n",
+      "[youtube] v_Lf-IB8_vQ: Downloading web creator player API JSON\n",
+      "[youtube] v_Lf-IB8_vQ: Downloading m3u8 information\n",
+      "[info] v_Lf-IB8_vQ: Downloading 1 format(s): 251\n",
+      "[download] Destination: C:\\Users\\savit\\PycharmProjects\\Youtube_translator\\wav_files.wav\\Bangladesh Crisis News ： Sheikh Hasina को शरण देने पर India पर बौखलाया बांग्लादेश! PM Modi.webm\n",
+      "[download] 100% of    3.44MiB in 00:00:00 at 10.09MiB/s  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\savit\\\\PycharmProjects\\\\Youtube_translator\\\\wav_files.wav\\\\Bangladesh Crisis News ： Sheikh Hasina को शरण देने पर India पर बौखलाया बांग्लादेश! PM Modi.webm'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-08T16:18:38.953516Z",
+     "start_time": "2024-08-08T16:18:38.928016Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "os.makedirs(os.getcwd(), exist_ok=True)",
+   "id": "d251d3c3d1e30722",
+   "outputs": [],
+   "execution_count": 42
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6c108fe4e5eb7c90"
   }
  ],
  "metadata": {
